 # [#31108] Fatal erorr right after install. Thanks Klas and Michael Babker
 # [#31120] [2.5] *plug-in manager search give errors and warning for '/','*' and '\
 # [#30354] Invalid Javascript Redirect in JApplication::redirect() when headers have already been sent. Thanks Ben Tasker.
 $ [#26548] [patch] incorrect error check in menus.php. Thanks Rob Clayburn and Ben Tasker

07-Jun-2013 Jean-Marie Simonet
 + [#31106] Added Belgian flag for mod_languages. Thanks Fonny Smets 

24-May-2013 Michael Babker
 # [#30994] Untranslated String.  Thanks Jean-Marie Simonet

24-May-2013 Jean-Marie Simonet
 # [#30945] Wrong error when folder creation not possible due to permissions. Thanks Phil Taylor

19-May-2013 Michael Babker
 # [#30926] Beez5: Additional < in category list.  Thanks Constantin Romankiewicz
 # [#30906] *Batch usage needs strict permissions.  Thanks Jean-Marie Simonet

13-May-2013 Jean-Marie Simonet
 ^ [#30663] Default Value for the Option Show Sub-menu Items to be Set as Yes. Thanks Mig
 # [#30873] *Multilanguage: PHP warning when logging.

05-May-2013 Michael Babker
 ^ [#30810] Disable ReCaptcha plugin when Joomla is installed.  Thanks Nick Savov

03-May-2013 Jean-Marie Simonet
 # [#30571] * Strict Standards: Declaration of ContentModelCategories::populateState() should be compatible with JModel::populateState()
 # [#30103] Cannot delete web site entry for a contact. Thanks Elin Waring
 # [#30748] *Multilanguage issue with contacts. Thanks Benjamin Trenkle
 # [#30672] Category blog: COM_CONTENT_NO_ARTICLES message is missing. Thanks Charles Perk.

30-Apr-2013 Jean-Marie Simonet
 # [#29922] Browser Agent Google Chrome on IOS. Thanks Georges Wilson.

29-Apr-2013 Jean-Marie Simonet
 # [#30723] Can't upload file after update from 2.5.9 to 2.5.10. Thanks Mark Dexter

-------------------- 2.5.11 Stable Release 26-April-2013] ------------------

26-Apr-2013 Mark Dexter
 # [#30681] Error in Database tab in Extension Manager. Thanks Amirol Ahmad.