@@ -34,26 +34,32 @@ class ContentViewCategory extends JViewLegacy
 		$user	= JFactory::getUser();
 
 		// Get some data from the models
+		$category	= $this->get('Category');
+		$parent		= $this->get('Parent');
+
+		// Check for errors.
+		if ($category == false)
+		{
+			return JError::raiseError(404, JText::_('JGLOBAL_CATEGORY_NOT_FOUND'));
+		}
+
+		if ($parent == false)
+		{
+			return JError::raiseError(404, JText::_('JGLOBAL_CATEGORY_NOT_FOUND'));
+		}
+
+		// Get some data from the models
 		$state		= $this->get('State');
 		$params		= $state->params;
 		$items		= $this->get('Items');
-		$category	= $this->get('Category');
 		$children	= $this->get('Children');
-		$parent		= $this->get('Parent');
-		$pagination = $this->get('Pagination');
+		$pagination 	= $this->get('Pagination');
 
 		// Check for errors.
-		if (count($errors = $this->get('Errors'))) {
+		if (count($errors = $this->get('Errors')))
+		{
 			JError::raiseError(500, implode("\n", $errors));
 			return false;
-		}
-
-		if ($category == false) {
-			return JError::raiseError(404, JText::_('JGLOBAL_CATEGORY_NOT_FOUND'));
-		}
-
-		if ($parent == false) {
-			return JError::raiseError(404, JText::_('JGLOBAL_CATEGORY_NOT_FOUND'));
 		}
 
 		// Setup the category parameters.
